# cmaketest

./: CMakeLists.txt
dependency/: CMakeLists.txt  Config.cmake.in  liba.cpp  libb.cpp
dependency/include/: liba.h  libb.h
main/: CMakeLists.txt  main.cpp
